# manga-reader-app

./: .gitignore  BETA_RELEASE_2026-02-09.md  BETA_RELEASE_2026-02-11.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  package-lock.json  package.json  run_app.bat  vercel.json
.github/workflows/: auto-version-tag.yml  ci.yml  pages.yml  release-electron.yml
.github/workflows/deploy/: docker-compose.prod.yml
artifacts/beta/v0.9.0-beta.2/: manifest.json
backend/: Dockerfile  library.db  library.json  library.json.bak  pyinstaller.spec  requirements.txt  run_migrations.py  test_scraper.py
backend/app/: __init__.py  main.py  scheduler.py
backend/app/api/: __init__.py  categories.py  downloads.py  history.py  library.py  manga.py  proxy.py  reader.py  scheduler.py  settings.py  sources.py  updates.py
backend/data/: pyyomi.db
backend/scripts/: build_backend_binary.ps1
backend/tests/: test_download_manager_paths.py  test_image_cache.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/resources/data/: pyyomi.db
desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  extensions.md
electron/: README.md  main.js  package-lock.json  package.json  preload.js
frontend/: Dockerfile  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  index.html  metadata.json  package.json  types.ts
(+44 files in other folders)
